<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_close">Close</string>
    <string name="common_try_again">Try again</string>
    <string name="common_dismiss">Dismiss</string>
    <string name="common_success">Success</string>
    <string name="common_failure">Failed</string>

    <string name="common_retake">Retake</string>
    <string name="common_confirm">Confirm</string>

    <string name="permisson_location_missing">This app requires permission to access your location for scanning to work.</string>
    <string name="permisson_camera_missing">This app requires permission to use the camera for scanning to work.</string>
    <string name="permisson_audio_missing">This app requires permission to record audio for scanning to work.</string>

    <!--Selfie Scanner-->
    <string name="selfie_scanner_step_title_confirm">Confirm selfie</string>
    <string name="selfie_scanner_step_title_selfie">Take a selfie</string>
    <string name="selfie_scanner_step_title_liveliness_check">Liveliness check</string>
    <string name="selfie_scanner_status_title_progress_liveliness">checking liveliness</string>
    <string name="selfie_scanner_status_title_progress_scanning">scanning…</string>
    <string name="selfie_scanner_status_title_error">Selfie scan failed</string>
    <string name="selfie_scanner_status_title_success_selfie">face detected</string>
    <string name="selfie_scanner_status_title_liveliness_check_success">@string/selfie_scanner_status_title_progress_liveliness</string>
    <string name="selfie_scanner_status_descriptionn_success_selfie">Successful</string>
    <string name="selfie_scanner_status_description_success_liveliness">Scan successful</string>
    <string name="selfie_scanner_description_manual_selfie">Please take a manual selfie</string>

    <string name="selfie_scanner_step_selfie">Look into camera"</string>
    <string name="selfie_scanner_step_turn_head_left">Turn your head left</string>
    <string name="selfie_scanner_step_turn_head_right">Turn your head right</string>

    <string name="selfie_scanner_warning_face_not_detected">Face not detected</string>
    <string name="selfie_scanner_warning_face_not_in_frame">Fit face in frame</string>
    <string name="selfie_scanner_warning_face_too_close">Move the phone farther</string>
    <string name="selfie_scanner_warning_face_too_far">Move the phone closer</string>
    <string name="selfie_scanner_warning_yaw_too_big">Face the camera directly</string>
    <string name="selfie_scanner_warning_eyes_closed">Look at the camera</string>
    <string name="selfie_scanner_warning_device_not_steady">Device not steady</string>

    <string name="selfie_scanner_error_unknown">Something went wrong</string>
    <string name="selfie_scanner_error_timeout">Photo timed out</string>
    <string name="selfie_scanner_error_face_disappeared">Face disappeared</string>
    <string name="selfie_scanner_error_camera_permission_not_granted">Camera permission required</string>
    <string name="selfie_scanner_error_manual_selfie_not_allowed" translatable="false">Manual selfie is not allowed</string>
    <string name="selfie_scanner_error_recording_failed">Something went wrong</string>
    <string name="selfie_scanner_error_scanner_interrupted">Scanner was interrupted</string>
    <string name="selfie_scanner_error_scanner_description">It was not possible to take your selfie.\n\nThis process is mandatory for your onboarding process.</string>
    <string name="selfie_scanner_error_multiple_faces_detected">Multiple faces detected</string>
    <string name="selfie_scanner_error_play_services">Google Play Services is not available or your version is out of date</string>
    <string name="selfie_scanner_error_models_not_downloaded">Recognition models not available. Check internet connection and/or free space available</string>


    <!-- Document Scanner -->
    <string name="document_scanner_failed">Scanning failed</string>
    <string name="document_scanner_step_scan_title_front">Scan front</string>
    <string name="document_scanner_step_scan_title_front_angled">Scan front tilted</string>
    <string name="document_scanner_step_scan_title_back">Scan back</string>
    <string name="document_scanner_step_scan_title_back_angled">Scan back tilted</string>
    <string name="document_scanner_step_scan_title_inside_left">Scan inside left</string>
    <string name="document_scanner_step_scan_title_inside_left_angled">Scan inside left tilted</string>
    <string name="document_scanner_step_scan_title_inside_right">Scan inside right</string>
    <string name="document_scanner_step_scan_title_inside_right_angled">Scan inside right_tilted</string>

    <string name="document_scanner_step_success_front">Front scanned</string>
    <string name="document_scanner_step_success_front_angled">Front tilted scanned</string>
    <string name="document_scanner_step_success_back">Back scanned</string>
    <string name="document_scanner_step_success_back_angled">Back tilted scanned</string>
    <string name="document_scanner_step_success_inside_left">Inside left scanned</string>
    <string name="document_scanner_step_success_inside_left_angled">Inside left tilted scanned</string>
    <string name="document_scanner_step_success_inside_right">Inside right scanned</string>
    <string name="document_scanner_step_success_inside_right_angled">Inside right tilted scanned</string>

    <string name="document_scanner_step_result_default">Confirm scan result</string>
    <string name="document_scanner_step_result_title_front">Confirm document front</string>
    <string name="document_scanner_step_result_title_front_angled">Confirm front tilted</string>
    <string name="document_scanner_step_result_title_back">Confirm back</string>
    <string name="document_scanner_step_result_title_back_angled">Confirm back tilted</string>
    <string name="document_scanner_step_result_title_inside_left">Confirm inside left</string>
    <string name="document_scanner_step_result_title_inside_left_angled">Confirm inside left tilted</string>
    <string name="document_scanner_step_result_title_inside_right">Confirm inside right</string>
    <string name="document_scanner_step_result_title_inside_right_angled">Confirm inside right tilted</string>

    <string name="document_scanner_status_automatic_mode_explanation">Place document into frame</string>
    <string name="document_scanner_status_manual_mode_explanation">Please take picture of the document</string>
    <string name="document_scanner_status_manual_mode_trigger">Take snapshot</string>

    <string name="document_scanner_step_warning_too_dark">Too dark</string>
    <string name="document_scanner_step_warning_not_steady">Device not steady</string>
    <string name="document_scanner_step_warning_recognition_models_not_downloaded">Recognition models not available. Check internet connection and/or free space available</string>

    <string name="document_scanner_error_unknown">Something went wrong</string>
    <string name="document_scanner_error_timeout">Scan timed out</string>
    <string name="document_scanner_error_camera_permission_not_granted">Camera permission required</string>
    <string name="document_scanner_error_audio_permission_not_granted">Record Audio permission required</string>
    <string name="document_scanner_error_recording_failed">Something went wrong</string>
    <string name="document_scanner_error_scanner_interrupted">Scanner was interrupted</string>
    <string name="document_scanner_error_play_services">Google Play Services is not available or your version is out of date</string>
    <string name="document_scanner_error_scanner_description">It was not possible to scan your document.\n\nThis process is mandatory for your onboarding process.</string>

    <!-- Nfc Scanner -->
    <string name="nfc_scanner_title">Scanning NFC</string>
    <string name="nfc_scanner_description">Place your phone on your ID document</string>
    <string name="nfc_scanner_step_looking_for_document">Looking for document</string>
    <string name="nfc_scanner_step_looking_for_document_error">Something went wrong during scanning. Please try again.</string>
    <string name="nfc_scanner_step_connecting_to_document">Connecting to document</string>
    <string name="nfc_scanner_step_connecting_to_document_error">Something went wrong during scanning. Please try again.</string>
    <string name="nfc_scanner_step_authenticating">Authenticating</string>
    <string name="nfc_scanner_step_authenticating_error">Authentication failed. Please check that you entered your information correctly</string>
    <string name="nfc_scanner_step_reading_data">Reading data</string>
    <string name="nfc_scanner_step_reading_data_error">Something went wrong during scanning. Please try again.</string>
    <string name="nfc_scanner_error_not_enabled">NFC is not enabled</string>
    <string name="nfc_scanner_error_not_supported">NFC is not supported</string>
    <string name="nfc_scanner_error_unknown">Unexpected error occurred</string>

    <!-- Submit Kyc -->
    <string name="submit_title">Submit Kyc</string>
    <string name="submit_step_validating">Validating…</string>
    <string name="submit_step_uploading">Uploading…</string>
    <string name="submit_step_finished">Submitted data to our analysts</string>
    <string name="submit_error_title">Submit fails</string>
    <string name="submit_error_description">Please try again</string>
    <string name="submit_error_location_description">Unable to retrieve location</string>
</resources>