<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/selfie_scanner_step_title_confirm"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/selfiePreview"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/selfiePreview"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLabel"
        tools:background="@android:color/darker_gray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/buttonRetake"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Blue"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/common_retake"
        app:layout_constraintLeft_toLeftOf="@+id/selfiePreview"
        app:layout_constraintTop_toBottomOf="@+id/selfiePreview" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/buttonConfirm"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Blue"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/common_confirm"
        app:layout_constraintRight_toRightOf="@+id/selfiePreview"
        app:layout_constraintTop_toBottomOf="@+id/selfiePreview" />

</androidx.constraintlayout.widget.ConstraintLayout>